Add password reset flow

--- a/src/components/AuthForm/styles.module.scss
+++ b/src/components/AuthForm/styles.module.scss
@@ -36,6 +36,7 @@
   transform: translate(-50%, -50%);
   background-color: $colorWhite;
   font-weight: 600;
+  white-space: nowrap;
 }
 
 .fieldGroup {
