--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,9 @@
-$fontFamily: source-code-pro, 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace;
+$fontFamily: 'Cousine', source-code-pro, 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace;
 
 $colorDarkGray: #444;
 $colorGray: #9a9a9a;
+$colorGreen: #48c774;
 $colorOffWhite: #f3f3f3;
 $colorRed: #e2412b;
 $colorWhite: #fff;
+$colorYellow: #ffdd57;
