--- a/src/components/BudgetCategories/styles.module.scss
+++ b/src/components/BudgetCategories/styles.module.scss
@@ -35,15 +35,15 @@
   position: relative;
   height: 12px;
   overflow: hidden;
-  border: 1px solid $colorDarkGray;
-  background-color: $colorOffWhite;
+  border: 1px solid var(--color-progressBarBorder);
+  background-color: var(--color-progressBarBg);
 }
 
 .progressBar {
   position: absolute;
   top: 0;
   height: 100%;
-  border-right: 1px solid $colorDarkGray;
+  border-right: 1px solid var(--color-progressBarBorder);
 
   &[data-color='under'] {
     background-color: $colorGreen;
@@ -63,7 +63,7 @@
   top: 0;
   width: 1px;
   height: 100%;
-  background-color: $colorDarkGray;
+  // background-color: $colorDarkGray;
 }
 
 .labels {
