--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -2,19 +2,19 @@
 
 .button {
   padding: 6px 10px;
-  border: 2px solid $colorDarkGray;
-  background-color: $colorDarkGray;
+  border: 2px solid var(--color-borderAlt);
+  background-color: var(--color-borderAlt);
   color: $colorWhite;
   font-family: $fontFamily;
   font-size: 1em;
 
   &:disabled {
-    border-color: $colorGray;
-    background-color: $colorGray;
+    border-color: var(--color-border);
+    background-color: var(--color-border);
   }
 }
 
 .isOutline {
-  background-color: $colorWhite;
-  color: $colorDarkGray;
+  background-color: var(--color-bg);
+  color: var(--color-text);
 }
