--- a/src/components/Transaction/styles.module.scss
+++ b/src/components/Transaction/styles.module.scss
@@ -4,8 +4,7 @@
   display: flex;
   align-items: center;
   padding: 12px;
-  border-bottom: 1px dotted $colorDarkGray;
-  background-color: $colorWhite;
+  border-bottom: 1px dotted var(--color-borderAlt);
 
   &:last-child {
     border-bottom: 0;
@@ -18,7 +17,7 @@
 }
 
 .disabled {
-  color: rgba($colorDarkGray, 0.24);
+  color: var(--color-textAlt);
 }
 
 .date {
