--- a/src/pages/TransactionsPage/styles.module.scss
+++ b/src/pages/TransactionsPage/styles.module.scss
@@ -20,8 +20,8 @@
   width: 100%;
   padding: 0 12px;
   overflow: hidden;
-  border-bottom: 2px solid $colorDarkGray;
-  background-color: $colorWhite;
+  border-bottom: 2px solid var(--color-borderAlt);
+  background-color: var(--color-bg);
 
   @include media('>tablet') {
     position: sticky;
@@ -44,4 +44,11 @@
     width: calc(100% - 300px - var(--container-padding));
     padding-right: var(--container-padding);
   }
+}
+
+.tempDarkModeContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 0;
 }
