--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,17 @@
 $fontFamily: 'Cousine', source-code-pro, 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace;
 
-$colorDarkGray: #444;
-$colorGray: #9a9a9a;
+$colorGray50: #fafafa;
+$colorGray100: #f5f5f5;
+$colorGray200: #eee;
+$colorGray300: #e0e0e0;
+$colorGray400: #bdbdbd;
+$colorGray500: #9e9e9e;
+$colorGray600: #757575;
+$colorGray700: #616161;
+$colorGray800: #424242;
+$colorGray900: #212121;
+
 $colorGreen: #48c774;
-$colorOffWhite: #f3f3f3;
 $colorRed: #e2412b;
 $colorWhite: #fff;
 $colorYellow: #ffdd57;
