Add transactions gestures

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $colorGray700: #616161;
 $colorGray800: #424242;
 $colorGray900: #212121;
 
+$colorBlue: #3298dc;
 $colorGreen: #48c774;
 $colorRed: #e2412b;
 $colorWhite: #fff;
