--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@ html {
   --color-link: #{$colorGray800};
   --color-text: #{$colorGray800};
   --color-textAlt: #{$colorGray400};
+  --color-placeholder: #{$colorGray300};
   --color-progressBarBg: #{$colorGray100};
   --color-progressBarBorder: #{$colorGray800};
 
@@ -35,6 +36,7 @@ html {
     --color-link: #{$colorGray50};
     --color-text: #{$colorGray200};
     --color-textAlt: #{$colorGray700};
+    --color-placeholder: #{$colorGray700};
     --color-progressBarBg: #{$colorGray700};
     --color-progressBarBorder: transparent;
   }
