Add transactions hover actions

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,7 @@ $colorGray900: #212121;
 
 $colorBlue: #3298dc;
 $colorGreen: #48c774;
+$colorPurple: #be87de;
 $colorRed: #e2412b;
 $colorWhite: #fff;
 $colorYellow: #ffdd57;
