--- a/src/components/Transactions/Transaction/styles.module.scss
+++ b/src/components/Transactions/Transaction/styles.module.scss
@@ -40,16 +40,60 @@
     justify-content: flex-end;
   }
 
-  &[data-color='red'] {
-    background-color: $colorRed;
+  &[data-color='blue'] {
+    background-color: $colorBlue;
   }
 
   &[data-color='green'] {
     background-color: $colorGreen;
   }
 
-  &[data-color='blue'] {
-    background-color: $colorBlue;
+  &[data-color='purple'] {
+    background-color: $colorPurple;
+  }
+}
+
+.hoverActions {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  @at-root .transactionContainer:hover & {
+    display: flex;
+  }
+
+  button {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+    outline: 0;
+    opacity: 0.92;
+    background-color: var(--color-bg);
+    color: var(--color-text);
+    font-family: $fontFamily;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+
+      &[data-color='blue'] {
+        color: $colorBlue;
+      }
+
+      &[data-color='green'] {
+        color: $colorGreen;
+      }
+
+      &[data-color='purple'] {
+        color: $colorPurple;
+      }
+    }
   }
 }
 
