--- a/src/components/Transactions/Transaction/styles.module.scss
+++ b/src/components/Transactions/Transaction/styles.module.scss
@@ -61,37 +61,51 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: var(--color-popupOverlay);
 
   @at-root .transactionContainer:hover & {
     display: flex;
   }
 
-  button {
+  .action {
     display: flex;
-    flex-grow: 1;
     align-items: center;
     justify-content: center;
+    margin: 0 12px;
+  }
+
+  button {
+    position: relative;
+    padding: 8px 16px;
     border: 0;
     outline: 0;
-    opacity: 0.92;
-    background-color: var(--color-bg);
+    background-color: var(--color-popupBg);
     color: var(--color-text);
     font-family: $fontFamily;
     cursor: pointer;
 
-    &:hover {
-      text-decoration: underline;
+    &::before {
+      content: '';
+      position: absolute;
+      z-index: -1;
+      top: 2px;
+      left: 2px;
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-popupShadow);
+    }
 
+    &:hover {
       &[data-color='blue'] {
-        color: $colorBlue;
+        background-color: $colorBlue;
       }
 
       &[data-color='green'] {
-        color: $colorGreen;
+        background-color: $colorGreen;
       }
 
       &[data-color='purple'] {
-        color: $colorPurple;
+        background-color: $colorPurple;
       }
     }
   }
