--- a/src/components/UpdateTransactionModal/styles.module.scss
+++ b/src/components/UpdateTransactionModal/styles.module.scss
@@ -6,9 +6,13 @@
   display: flex;
   justify-content: space-between;
   padding: 18px 20px;
-  border-bottom: 1px dotted var(--color-border);
+}
 
-  &:last-child {
-    border-bottom: 0;
-  }
+.amount {
+  margin-left: 12px;
+}
+
+.note {
+  margin-top: 8px;
+  margin-bottom: 0;
 }
