--- a/src/components/Swipeable/styles.module.scss
+++ b/src/components/Swipeable/styles.module.scss
@@ -12,7 +12,8 @@
   border-bottom: 1px solid var(--color-bg);
   background-color: var(--color-bg);
 
-  &.isSwiping {
+  &.isSwiping,
+  &.isHovered {
     border-color: var(--color-swipeBorder);
   }
 }
@@ -53,9 +54,15 @@
 
 .hoverActions {
   display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   padding: 0 20px 4px;
+  background-color: var(--color-swipeOverlay);
 
-  @at-root .swipeContainer:hover & {
+  .isHovered & {
     display: flex;
   }
 
