--- a/src/components/Swipeable/styles.module.scss
+++ b/src/components/Swipeable/styles.module.scss
@@ -12,8 +12,8 @@
   border-bottom: 1px solid var(--color-bg);
   background-color: var(--color-bg);
 
-  &.isSwiping,
-  &.isHovered {
+  .swipeContainer:not(.isTouchDevice):hover &,
+  &.isSwiping {
     border-color: var(--color-swipeBorder);
   }
 }
@@ -54,15 +54,10 @@
 
 .hoverActions {
   display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 0 20px 4px;
-  background-color: var(--color-swipeOverlay);
+  padding: 8px 20px;
+  background-color: var(--color-swipeBorder);
 
-  .isHovered & {
+  .swipeContainer:hover & {
     display: flex;
   }
 
