Create split transaction interface

--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -1,6 +1,10 @@
 .selectContainer {
   position: relative;
 
+  button {
+    text-align: left;
+  }
+
   select {
     position: absolute;
     top: 0;
