--- a/src/components/Transactions/Transaction.module.scss
+++ b/src/components/Transactions/Transaction.module.scss
@@ -1,19 +1,12 @@
 @import 'styles/helpers';
 
 .transaction {
-  display: flex;
-  align-items: center;
-  padding: 12px;
+  padding-bottom: 8px;
   border-bottom: 1px dotted var(--color-borderAlt);
   background-color: var(--color-bg);
 
-  &:last-child {
-    border-bottom: 0;
-  }
-
   @include media('>tablet') {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-bottom: 0;
   }
 }
 
@@ -21,29 +14,43 @@
   color: var(--color-textAlt);
 }
 
+.heading {
+  display: flex;
+  padding: 12px;
+  padding-bottom: 8px;
+
+  @include media('>tablet') {
+    padding-bottom: 4px;
+  }
+}
+
 .date {
+  flex-shrink: 0;
   width: 48px;
   margin-right: 12px;
   text-align: center;
 }
 
-.content {
-  flex: 1;
-  overflow: hidden;
-}
-
 .description {
   margin-right: 60px;
-  margin-bottom: 4px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.details {
+.item {
   display: flex;
   justify-content: space-between;
-  margin-top: 2px;
+  padding: 8px 12px 2px 72px;
+
+  @include media('>tablet') {
+    padding-top: 8px;
+    padding-bottom: 4px;
+  }
+}
+
+.note {
+  margin-top: 4px;
 }
 
 .amount {
