Connect budget component to backend

--- a/src/components/BudgetCategories/Category.module.scss
+++ b/src/components/BudgetCategories/Category.module.scss
@@ -44,7 +44,7 @@
   top: 0;
   width: 1px;
   height: 100%;
-  // background-color: $colorDarkGray;
+  background-color: var(--color-progressBarMarker);
 }
 
 .labels {
